// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`properly changes state variables 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MyMassages />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <InfoAlert
          onClose={[Function]}
        >
          Na této stránce můžete vidět své zapsané masáže. Pro zobrazení podrobností o masáži klikněte na název dané události.
        </InfoAlert>,
        <h1>
          Moje masáže
        </h1>,
        <MyMassagePanel
          events={
            Array [
              Object {
                "massage": Object {
                  "client": null,
                  "date": 1970-01-01T00:00:00.000Z,
                  "ending": 1970-01-01T00:00:01.000Z,
                  "facility": Object {
                    "id": 1,
                    "name": "test",
                  },
                  "id": 1,
                },
              },
            ]
          }
          onCancel={[Function]}
        />,
      ],
      "className": "my-3",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Na této stránce můžete vidět své zapsané masáže. Pro zobrazení podrobností o masáži klikněte na název dané události.",
          "onClose": [Function],
        },
        "ref": null,
        "rendered": "Na této stránce můžete vidět své zapsané masáže. Pro zobrazení podrobností o masáži klikněte na název dané události.",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            false,
            "Moje masáže",
          ],
        },
        "ref": null,
        "rendered": Array [
          false,
          "Moje masáže",
        ],
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "events": Array [
            Object {
              "massage": Object {
                "client": null,
                "date": 1970-01-01T00:00:00.000Z,
                "ending": 1970-01-01T00:00:01.000Z,
                "facility": Object {
                  "id": 1,
                  "name": "test",
                },
                "id": 1,
              },
            },
          ],
          "onCancel": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <InfoAlert
            onClose={[Function]}
          >
            Na této stránce můžete vidět své zapsané masáže. Pro zobrazení podrobností o masáži klikněte na název dané události.
          </InfoAlert>,
          <h1>
            Moje masáže
          </h1>,
          <MyMassagePanel
            events={
              Array [
                Object {
                  "massage": Object {
                    "client": null,
                    "date": 1970-01-01T00:00:00.000Z,
                    "ending": 1970-01-01T00:00:01.000Z,
                    "facility": Object {
                      "id": 1,
                      "name": "test",
                    },
                    "id": 1,
                  },
                },
              ]
            }
            onCancel={[Function]}
          />,
        ],
        "className": "my-3",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Na této stránce můžete vidět své zapsané masáže. Pro zobrazení podrobností o masáži klikněte na název dané události.",
            "onClose": [Function],
          },
          "ref": null,
          "rendered": "Na této stránce můžete vidět své zapsané masáže. Pro zobrazení podrobností o masáži klikněte na název dané události.",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              false,
              "Moje masáže",
            ],
          },
          "ref": null,
          "rendered": Array [
            false,
            "Moje masáže",
          ],
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "events": Array [
              Object {
                "massage": Object {
                  "client": null,
                  "date": 1970-01-01T00:00:00.000Z,
                  "ending": 1970-01-01T00:00:01.000Z,
                  "facility": Object {
                    "id": 1,
                    "name": "test",
                  },
                  "id": 1,
                },
              },
            ],
            "onCancel": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`renders content correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MyMassages />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <InfoAlert
          onClose={[Function]}
        >
          Na této stránce můžete vidět své zapsané masáže. Pro zobrazení podrobností o masáži klikněte na název dané události.
        </InfoAlert>,
        <h1>
          Moje masáže
        </h1>,
        <h3>
          Žádné – 
          <Link
            replace={false}
            style={
              Object {
                "color": "#595959",
              }
            }
            to="/"
          >
            Jít na masáže
          </Link>
        </h3>,
      ],
      "className": "my-3",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Na této stránce můžete vidět své zapsané masáže. Pro zobrazení podrobností o masáži klikněte na název dané události.",
          "onClose": [Function],
        },
        "ref": null,
        "rendered": "Na této stránce můžete vidět své zapsané masáže. Pro zobrazení podrobností o masáži klikněte na název dané události.",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            false,
            "Moje masáže",
          ],
        },
        "ref": null,
        "rendered": Array [
          false,
          "Moje masáže",
        ],
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Žádné – ",
            <Link
              replace={false}
              style={
                Object {
                  "color": "#595959",
                }
              }
              to="/"
            >
              Jít na masáže
            </Link>,
          ],
        },
        "ref": null,
        "rendered": Array [
          "Žádné – ",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Jít na masáže",
              "replace": false,
              "style": Object {
                "color": "#595959",
              },
              "to": "/",
            },
            "ref": null,
            "rendered": "Jít na masáže",
            "type": [Function],
          },
        ],
        "type": "h3",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <InfoAlert
            onClose={[Function]}
          >
            Na této stránce můžete vidět své zapsané masáže. Pro zobrazení podrobností o masáži klikněte na název dané události.
          </InfoAlert>,
          <h1>
            Moje masáže
          </h1>,
          <h3>
            Žádné – 
            <Link
              replace={false}
              style={
                Object {
                  "color": "#595959",
                }
              }
              to="/"
            >
              Jít na masáže
            </Link>
          </h3>,
        ],
        "className": "my-3",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Na této stránce můžete vidět své zapsané masáže. Pro zobrazení podrobností o masáži klikněte na název dané události.",
            "onClose": [Function],
          },
          "ref": null,
          "rendered": "Na této stránce můžete vidět své zapsané masáže. Pro zobrazení podrobností o masáži klikněte na název dané události.",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              false,
              "Moje masáže",
            ],
          },
          "ref": null,
          "rendered": Array [
            false,
            "Moje masáže",
          ],
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Žádné – ",
              <Link
                replace={false}
                style={
                  Object {
                    "color": "#595959",
                  }
                }
                to="/"
              >
                Jít na masáže
              </Link>,
            ],
          },
          "ref": null,
          "rendered": Array [
            "Žádné – ",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Jít na masáže",
                "replace": false,
                "style": Object {
                  "color": "#595959",
                },
                "to": "/",
              },
              "ref": null,
              "rendered": "Jít na masáže",
              "type": [Function],
            },
          ],
          "type": "h3",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
